[gd_scene load_steps=17 format=3 uid="uid://xxdv7epd0p3c"]

[ext_resource type="Texture2D" uid="uid://c3iv4vad00m7r" path="res://assets/art/tiles/shelfs/Schrank_Leer.png" id="1_0w41v"]
[ext_resource type="Script" path="res://scripts/shelfs/shelf_3items.gd" id="1_bwrtk"]
[ext_resource type="Texture2D" uid="uid://beqd28h1kh35i" path="res://assets/art/tiles/shelfs/ducks/Schrank_Ente3.png" id="2_0tepy"]
[ext_resource type="Resource" uid="uid://dgtilqupef1yi" path="res://scripts/inventory/items/duck.tres" id="2_dlett"]
[ext_resource type="Texture2D" uid="uid://bothjfiyerknr" path="res://assets/art/tiles/shelfs/ducks/Schrank_Ente2.png" id="3_mtu2h"]
[ext_resource type="Texture2D" uid="uid://bxbub8yoxq4nx" path="res://assets/art/tiles/shelfs/ducks/Schrank_Ente1.png" id="4_vtf36"]
[ext_resource type="Texture2D" uid="uid://yonskrokkniu" path="res://assets/art/icons/keys/E-Key.png" id="6_oxuxu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_15ahv"]
atlas = ExtResource("1_0w41v")
region = Rect2(0, 4, 32, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4hkx"]
atlas = ExtResource("2_0tepy")
region = Rect2(0, 4, 32, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcdsm"]
atlas = ExtResource("3_mtu2h")
region = Rect2(0, 4, 32, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b1xg"]
atlas = ExtResource("4_vtf36")
region = Rect2(0, 4, 32, 92)

[sub_resource type="SpriteFrames" id="SpriteFrames_1j0dj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15ahv")
}],
"loop": true,
"name": &"0items",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4hkx")
}],
"loop": true,
"name": &"1items",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcdsm")
}],
"loop": true,
"name": &"2items",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b1xg")
}],
"loop": true,
"name": &"3items",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lrysu"]
atlas = ExtResource("6_oxuxu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcncb"]
atlas = ExtResource("6_oxuxu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_une5u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrysu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcncb")
}],
"loop": true,
"name": &"key_animation",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_chytf"]
size = Vector2(8, 20)

[node name="shelf_ducks" type="Node2D"]
script = ExtResource("1_bwrtk")
item = ExtResource("2_dlett")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1j0dj")
animation = &"3items"

[node name="e_key_animation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-2.84217e-14, -42)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_une5u")
animation = &"key_animation"
frame_progress = 0.312075

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
position = Vector2(0, 45)
shape = SubResource("RectangleShape2D_chytf")

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
